documentacion/obtenida/ARINC 429/driver and software/LX708-1/API/L71W32.H

typedef void VOID;
typedef void * LPVOID;
typedef int INT;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef const char * LPCSTR;
typedef int BOOL;
typedef int HCARD;
typedef int ERRVAL;
typedef int SCHNDX;

L71W32API ERRVAL __stdcall L71_CardGetInfoEx(LPUSHORT bufmodel,USHORT bufmodelcount,LPUSHORT buffeature,USHORT buffeaturecount,HCARD handleval);

L71W32API VOID __stdcall L71_CardInit(VOID);

L71W32API BOOL __stdcall L71_CardIsRunning(HCARD handleval);

L71W32API ERRVAL __stdcall L71_CardNop(HCARD handleval);

L71W32API ERRVAL __stdcall L71_CardNopEx(HCARD handleval);

L71W32API HCARD __stdcall L71_CardOpenEx(LPCSTR cardname,INT cardnum);

L71W32API HCARD __stdcall L71_CardOpenExx(LPCSTR cardname,INT cardnum,LPVOID hAppWnd,USHORT uiRemovalMsg);

L71W32API VOID __stdcall L71_CardResetEx(HCARD handleval);

L71W32API ERRVAL __stdcall L71_CardResume(HCARD handleval);

L71W32API ERRVAL __stdcall L71_CardTest(USHORT level,HCARD handleval);

L71W32API ERRVAL __stdcall L71_CardTest0(HCARD handleval);

L71W32API ERRVAL __stdcall L71_CardTest1(HCARD handleval);

L71W32API ERRVAL __stdcall L71_CardTest2(HCARD handleval);

L71W32API ERRVAL __stdcall L71_CardTest3(HCARD handleval);

L71W32API VOID __stdcall L71_CardTrigger(HCARD handleval);

L71W32API ULONG __stdcall L71_CFGRdL(INT addrval,HCARD handleval);

L71W32API VOID __stdcall L71_CFGWrL(ULONG value,INT addrval,HCARD handleval);

L71W32API ULONG __stdcall L71_CmdAddr(SCHNDX index,HCARD handleval);

L71W32API ULONG __stdcall L71_CmdAlloc(INT count,HCARD handleval);

L71W32API ULONG __stdcall L71_CmdAllocEx(ULONG configval,INT count,HCARD handleval);

L71W32API ULONG __stdcall L71_CmdBaseRd(HCARD handleval);

L71W32API VOID __stdcall L71_CmdBaseWr(ULONG addrval,HCARD handleval);

L71W32API ERRVAL __stdcall L71_CmdClear(HCARD handleval);

L71W32API USHORT __stdcall L71_CmdCountRd(HCARD handleval);

L71W32API VOID __stdcall L71_CmdCountWr(USHORT countval,HCARD handleval);

L71W32API USHORT __stdcall L71_CmdCtrlRd(SCHNDX index,HCARD handleval);

L71W32API VOID __stdcall L71_CmdCtrlWr(USHORT ctrlval,SCHNDX index,HCARD handleval);

L71W32API USHORT __stdcall L71_CmdCurrRd(HCARD handleval);

L71W32API VOID __stdcall L71_CmdCurrWr(USHORT addrval,HCARD handleval);

L71W32API VOID __stdcall L71_CmdInit(USHORT opcode,LPUSHORT block);

L71W32API SCHNDX __stdcall L71_CmdInsert(LPUSHORT block,HCARD handleval);

L71W32API USHORT __stdcall L71_CmdMaxRd(HCARD handleval);

L71W32API VOID __stdcall L71_CmdMaxWr(USHORT count,HCARD handleval);

L71W32API ERRVAL __stdcall L71_CmdRd(LPUSHORT block,ULONG addrval,HCARD handleval);

L71W32API ERRVAL __stdcall L71_CmdShotWr(BOOL value,SCHNDX index,HCARD handleval);

L71W32API ERRVAL __stdcall L71_CmdSkipWr(BOOL value,SCHNDX index,HCARD handleval);

L71W32API VOID __stdcall L71_CmdStackClr(HCARD handleval);

L71W32API USHORT __stdcall L71_CmdStartRd(HCARD handleval);

L71W32API VOID __stdcall L71_CmdStartWr(USHORT addrval,HCARD handleval);

L71W32API INT __stdcall L71_CmdTotalRd(HCARD handleval);

L71W32API VOID __stdcall L71_CmdTotalWr(INT countval,HCARD handleval);

L71W32API ERRVAL __stdcall L71_CmdWr(LPUSHORT block,ULONG addrval,HCARD handleval);

L71W32API ERRVAL __stdcall L71_CommCall(ULONG addrval,HCARD handleval);

L71W32API ERRVAL __stdcall L71_CommCheck(HCARD handleval);

L71W32API ERRVAL __stdcall L71_CommDisable(USHORT command,HCARD handleval);

L71W32API ERRVAL __stdcall L71_CommDisableEx(USHORT command,HCARD handleval);

L71W32API ERRVAL __stdcall L71_CommEnable(HCARD handleval);

L71W32API ULONG __stdcall L71_CommRdL(ULONG addrval,HCARD handleval);

L71W32API ERRVAL __stdcall L71_CommRdsW(LPUSHORT valueptr,ULONG addrval,USHORT count,HCARD handleval);

L71W32API USHORT __stdcall L71_CommRdW(ULONG addrval,HCARD handleval);

L71W32API ERRVAL __stdcall L71_CommRun(LPUSHORT dataptr,USHORT datacount,LPUSHORT codeptr,USHORT codecount,HCARD handleval);

L71W32API VOID __stdcall L71_CommWrL(ULONG value,ULONG addrval,HCARD handleval);

L71W32API ERRVAL __stdcall L71_CommWrsW(LPUSHORT valueptr,ULONG addrval,USHORT count,HCARD handleval);

L71W32API VOID __stdcall L71_CommWrW(USHORT value,ULONG addrval,HCARD handleval);