documentacion/obtenida/ARINC 429/driver and software/LX708-1/API/L71W32NET.CS

        [DllImport("L71W32.DLL", EntryPoint = "_L71_CardGetInfoEx@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_CardGetInfoEx(ref UInt16 bufmodel, UInt16 bufmodelcount, ref UInt16 buffeature, UInt16 buffeaturecount, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_CardInit@0", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L71_CardInit();
        [DllImport("L71W32.DLL", EntryPoint = "_L71_CardIsRunning@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_CardIsRunning(UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_CardNop@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_CardNop(UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_CardNopEx@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_CardNopEx(UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_CardOpenEx@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L71_CardOpenEx(ref string cardname, Int32 cardnum);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_CardOpenExx@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L71_CardOpenExx(ref string cardname, Int32 cardnum, IntPtr happwnd, UInt16 uiremovalmsg);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_CardResetEx@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L71_CardResetEx(UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_CardResume@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_CardResume(UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_CardTest@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_CardTest(UInt16 level, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_CardTest0@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_CardTest0(UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_CardTest1@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_CardTest1(UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_CardTest2@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_CardTest2(UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_CardTest3@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_CardTest3(UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_CardTrigger@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L71_CardTrigger(UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_CFGRdL@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L71_CFGRdL(Int32 addrval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_CFGWrL@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L71_CFGWrL(UInt32 value, Int32 addrval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_CmdAddr@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L71_CmdAddr(Int32 index, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_CmdAlloc@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L71_CmdAlloc(Int32 count, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_CmdAllocEx@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L71_CmdAllocEx(UInt32 configval, Int32 count, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_CmdBaseRd@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L71_CmdBaseRd(UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_CmdBaseWr@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L71_CmdBaseWr(UInt32 addrval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_CmdClear@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_CmdClear(UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_CmdCountRd@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L71_CmdCountRd(UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_CmdCountWr@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L71_CmdCountWr(UInt16 countval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_CmdCtrlRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L71_CmdCtrlRd(Int32 index, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_CmdCtrlWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L71_CmdCtrlWr(UInt16 ctrlval, Int32 index, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_CmdCurrRd@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L71_CmdCurrRd(UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_CmdCurrWr@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L71_CmdCurrWr(UInt16 addrval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_CmdInit@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L71_CmdInit(UInt16 opcode, ref UInt16 block);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_CmdInsert@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_CmdInsert(ref UInt16 block, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_CmdMaxRd@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L71_CmdMaxRd(UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_CmdMaxWr@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L71_CmdMaxWr(UInt16 count, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_CmdRd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_CmdRd(ref UInt16 block, UInt32 addrval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_CmdShotWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_CmdShotWr(Int32 value, Int32 index, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_CmdSkipWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_CmdSkipWr(Int32 value, Int32 index, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_CmdStackClr@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L71_CmdStackClr(UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_CmdStartRd@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L71_CmdStartRd(UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_CmdStartWr@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L71_CmdStartWr(UInt16 addrval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_CmdTotalRd@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_CmdTotalRd(UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_CmdTotalWr@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L71_CmdTotalWr(Int32 countval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_CmdWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_CmdWr(ref UInt16 block, UInt32 addrval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_CommCall@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_CommCall(UInt32 addrval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_CommCheck@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_CommCheck(UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_CommDisable@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_CommDisable(UInt16 command, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_CommDisableEx@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_CommDisableEx(UInt16 command, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_CommEnable@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_CommEnable(UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_CommRdL@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L71_CommRdL(UInt32 addrval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_CommRdsW@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_CommRdsW(ref UInt16 valueptr, UInt32 addrval, UInt16 count, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_CommRdW@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L71_CommRdW(UInt32 addrval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_CommRun@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_CommRun(ref UInt16 dataptr, UInt16 datacount, ref UInt16 codeptr, UInt16 codecount, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_CommWrL@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L71_CommWrL(UInt32 value, UInt32 addrval, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_CommWrsW@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L71_CommWrsW(ref UInt16 valueptr, UInt32 addrval, UInt16 count, UInt32 handleval);
        [DllImport("L71W32.DLL", EntryPoint = "_L71_CommWrW@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L71_CommWrW(UInt16 value, UInt32 addrval, UInt32 handleval);
